--- a/melbourneParking.properties
+++ b/melbourneParking.properties
@@ -1,2 +1,4 @@
 refresh.message=Hiiii All refresh
-refresh.melbourneRefreshRate= 0 0/2 * * * *
+refresh.melbourneRefreshRate= */10 * * * * *
+
+#0 0/2 * * * *
