--- a/melbourneParking.properties
+++ b/melbourneParking.properties
@@ -1,3 +1,3 @@
 refresh.message=Hiiii All refresh
-refresh.melbourneRefreshRate= */10 * * * * *
-#0 0/2 * * * *
+refresh.melbourneRefreshRate= 0 0/2 * * * *
+#*/10 * * * * *
