--- a/melbourneParking.properties
+++ b/melbourneParking.properties
@@ -1,4 +1,4 @@
 refresh.message=Hiiii All refresh Shivangi
-refresh.melbourneRefreshRate= */10 * * * * *
+refresh.melbourneRefreshRate= 0 0/2 * * * *
 #0 0/2 * * * *
 #*/10 * * * * *
